# repomind

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml  repomind.config.toml.example  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: repomind-ask.md  repomind-explain.md  repomind-overview.md
.github/workflows/: ci.yml  publish.yml
plugin/: install.ps1  install.sh  plugin.json  server.py
repomind/: __init__.py  __main__.py
repomind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
repomind/cli/: __init__.py  main.py
repomind/core/: __init__.py  config.py  doctor.py  embeddings.py  faiss_store.py  indexer.py  llm.py  memory.py  overview.py  retriever.py  summarizer.py
repomind/storage/: __init__.py
repomind/utils/: __init__.py  logging.py  output.py
repomind_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skills/repomind/: SKILL.md
